#258 #259 sequencer scheduling improvements overlapping notes are no longer allowed to be scheduled fixing bugs in existing overlapping note correction code / note off re-emmitting removing dupe notes after arp mappings sequencer device is turned off when a user releases the instrument and the seq arp mapping mode relies on user input similarly the seq cannot be turned on when not controlled
CSS tweaks

--- a/public/main.css
+++ b/public/main.css
@@ -1090,6 +1090,7 @@ ul.instParamList li.inlineLabel {
 
 .component.instrumentCloset li {
     display: flex;
+    padding-bottom: 1px;
 }
 
 .component.instrumentCloset li .instrument {
